spectec/test/elab/neg/type-extend-forward-decl.spectec
;; A variant tries to inline a forward-declared type as a case before
;; its body has been given.

syntax incomplete

syntax extendIncomplete =
  | incomplete
  | OTHER nat
